--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
   <p1> This is section </p1>
 </section>
 <footer>
+  <a href="https://validator.w3.org/nu/?showsource=yes&useragent=Validator.nu%2FLV+http%3A%2F%2Fvalidator.w3.org%2Fservices&acceptlanguage=&doc=https%3A%2F%2Fewtaylor225.github.io%2Fdev-06%2F" target="_blank"> My Nu Checker Results</a>
   <p2> Do not copy what I am doing or catastrophic conseqeunces MAY occur </p2>
 </footer>
 <!-- partial -->
